test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST__api_atlas_v2_groups_111111111111111111111111_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 30 May 2025 05:07:47 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="6S35I5WISWW9pi739HoU8SzR7XeSfZ5M", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 4

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}